respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Import_Export_Cargo_Line_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated_Cargo_Line_Currency__c</fullName>
        <formula>Amount__c *  Conversion_Rate_to_Cargo_Line_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated (Cargo Line Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount Allocated</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Cargo_Line_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Cargo Line Currency</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement_Concept__c</fullName>
        <formula>Disbursement__r.Disbursment_Concept__c</formula>
        <label>Disbursement Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <description>master-detail specifying reference number of disbursement where it will be applied</description>
        <label>Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Imp-Exp Cargo Lines / Disbursements</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Import_Export_Cargo_Line__c</fullName>
        <description>master-detail specifying cargo line and IE Quote/Order reference number to apply to disbursement</description>
        <label>Import-Export Cargo Line</label>
        <referenceTo>Quote_Item_Line__c</referenceTo>
        <relationshipLabel>Imp-Exp Cargo Lines / Disbursements</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Exc__c</fullName>
        <formula>Disbursement__r.Invoice_Amount_Exc__c</formula>
        <label>Invoice Amount (Exc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Disbursement__r.Invoice_Date__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Item_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Amount__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Amount__c</formula>
        <label>Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Disbursement_Outstanding_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Disbursement__r.Payment_Amount__c</formula>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Disbursement__r.Payment_Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Ref__c</fullName>
        <formula>Disbursement__r.Payment_Ref__c</formula>
        <label>Payment Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <formula>Disbursement__r.Account__r.Name</formula>
        <label>Supplier Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Ref__c</fullName>
        <formula>Disbursement__r.Invoice_Ref__c</formula>
        <label>Supplier Invoice Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Price__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Price__c</formula>
        <label>Unit Origin Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>Import_Export_Cargo_Line__r.Units__c</formula>
        <label>Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Imp-Exp Cargo Line / Disbursement</label>
    <nameField>
        <label>Import-Export Cargo Line/ Disbursement N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imp-Exp Cargo Lines / Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>